# hom3

./: .gitignore  .gitmodules  .travis.yml  404.md  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  _config.yml  cleanup.sh  configure.sh  index.md
_layouts/: default.html
cmake/: FindHDF5.cmake  FindHDF5Lite.cmake  FindPNetCDF.cmake  FindTBB.cmake  FindThrust.cmake
development/: index.md
documentation/: index.md
documentation/physics/: index.md
ext/gtest/: CMakeLists.txt
getting_started/: index.md
gtest-1.6.0/: CMakeLists.txt  Makefile  cmake_install.cmake
gtest-1.6.0/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  RUN_TESTS_postBuildPhase.makeRelWithDebInfo  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo  gtest_main_postBuildPhase.makeRelWithDebInfo  gtest_postBuildPhase.makeMinSizeRel
gtest-1.6.0/gtest.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  globals.hpp
src/containers/: CMakeLists.txt  bool_matrix.hpp  hierarchical.hpp  matrix.hpp  sequential.hpp
src/containers/hierarchical/: implementation.hpp  new_implementation.hpp
src/containers/hierarchical/tests/: CMakeLists.txt  container_test.cpp  hierarchical_container_test.cpp
src/containers/sequential/: algorithm.hpp  implementation.hpp  iterator.hpp  reference.hpp  traits.hpp  value.hpp
src/containers/sequential/tests/: CMakeLists.txt  container_test.cpp  fixedcell.hpp  helpers.hpp  nodalcell.hpp  sequential_container_test.cpp
src/geometry/: CMakeLists.txt  algorithms.hpp  boundary.hpp  boundary_dbg.cpp  cell_cartesian.hpp  geometry.hpp  geometry_dbg.cpp  implicit.hpp
src/grid/: CMakeLists.txt  boundary.hpp  cellvertex.hpp  container_test.cpp  generation.hpp  grid.hpp  grid_dbg.cpp  helpers.hpp
src/interpolation/: interpolation.hpp  rbf.hpp
src/interpolation/tests/: CMakeLists.txt  rbf_test.cpp
src/io/: hdf5_file.hpp  output.hpp  vtk.hpp
src/io/tests/: CMakeLists.txt  hdf5_file_test.cpp
src/misc/: assert.hpp  compute.hpp  constants.hpp  dbg.hpp  debug.hpp  error.hpp  estd.hpp  filesystem.hpp  functions.hpp  heap_buffer.hpp  helpers.hpp  indices.hpp  integer.hpp  log.hpp  math.hpp  math.hpp~  meta.hpp  mpi.hpp  properties.hpp  ranges.hpp  returns.hpp  stack_memory.hpp  stack_vector.hpp  test.hpp  traits.hpp  types.hpp  units.hpp
src/misc/tests/: CMakeLists.txt  heap_buffer_test.cpp  integer_test.cpp  mpi_test.cpp  thrust_test.cpp
src/output/: CMakeLists.txt  file.hpp  file_test.cpp  hdf5file.hpp  output.hpp
src/quadrature/: quadrature.hpp
src/solver/: CMakeLists.txt  interface.hpp
src/solver/fv/: CMakeLists.txt  advection.hpp  boundary_condition.hpp  cns.hpp  container.hpp  coupled_euler_euler_test.cpp  coupled_heat_euler_test.cpp  coupling.hpp  euler.hpp  euler_fv_solver_test.cpp  heat.hpp  heat_fv_solver_test.cpp  ns.hpp  solver.hpp  tags.hpp  utilities.hpp
src/solver/fv/advection/: boundary_conditions.hpp  indices.hpp  physics.hpp  tags.hpp
src/solver/fv/advection/tests/: CMakeLists.txt  advection_fv_solver_test.cpp
src/solver/fv/cns/: CMakeLists.txt  boundary_conditions.hpp  coupling_conditions.hpp  indices.hpp  initial_conditions.hpp  moving_boundary_conditions.hpp  physics.hpp  quantities.hpp  tags.hpp
src/solver/fv/cns/tests/: CMakeLists.txt  cns_fv_mb_solver_test.cpp  cns_fv_solver_test.cpp
src/solver/fv/euler/: boundary_conditions.hpp  coupling_conditions.hpp  indices.hpp  initial_conditions.hpp  physics.hpp  quantities.hpp  tags.hpp
src/solver/fv/euler/tests/: CMakeLists.txt  coupled_euler_euler_test.cpp  euler_fv_solver_test.cpp
src/solver/fv/heat/: boundary_conditions.hpp  coupling_conditions.hpp  indices.hpp  moving_boundary_conditions.hpp  physics.hpp  quantities.hpp  tags.hpp
src/solver/fv/heat/tests/: CMakeLists.txt  heat_fv_mb_solver_test.cpp  heat_fv_solver_test.cpp
src/solver/fv/tests/: CMakeLists.txt  coupled_cns_heat_test.cpp  coupled_mb_cns_heat_test.cpp
stylesheets/: styles.css
tools/: cleanup.sh  cpplint.py  style-check.sh
